adding my changes to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!-- Add and commit your work to git -->
 
 <!-- Push your branch to GitHub, to this repository -->
+<h1>Arusa Hussain</h1>
 
 </body>
 </html>
