--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Git practice for clone, branch, commit, and push</title>
 </head>
 <body>
-
+</h1>Timothy Singletary
 <!-- Step 1: Create a new branch called firstname-lastname where the first and last name are your first and last name. If you need spaces, use a dash character. -->
 
 <!-- Create an h1 tag in this file that contains your first and last name. -->
