--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+<h1> tre-smith</h1>
+
 <!-- Step 1: Create a new branch called firstname-lastname where the first and last name are your first and last name. If you need spaces, use a dash character. -->
 
 <!-- Create an h1 tag in this file that contains your first and last name. -->
