--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Git practice for clone, branch, commit, and push</title>
+    <h1>Staci Holmes-Segarra</h1>
 </head>
 <body>
 
