--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Git practice for clone, branch, commit, and push</title>
 </head>
 <body>
-
+<hi>Luis Esquivel</hi>
 <!-- Step 1: Create a new branch called firstname-lastname where the first and last name are your first and last name. If you need spaces, use a dash character. -->
 
 <!-- Create an h1 tag in this file that contains your first and last name. -->
