adding my changes to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 
 <h1>Donald Twitty</h1>
+<h2>Donald Twitty</h2>
 <!-- Step 1: Create a new branch called firstname-lastname where the first and last name are your first and last name. If you need spaces, use a dash character. -->
 
 <!-- Create an h1 tag in this file that contains your first and last name. -->
